# LearnFFmpeg

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/byteflow/learnffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fshader_0.glsl  fshader_1.glsl  fshader_10.glsl  fshader_2.glsl  fshader_3.glsl  fshader_4.glsl  fshader_5.glsl  fshader_6.glsl  fshader_7.glsl
app/src/main/cpp/: CMakeLists.txt  learn-ffmpeg.cpp
app/src/main/cpp/common/: AVPacketQueue.cpp  AVPacketQueue.h  SyncClock.h  ThreadSafeQueue.h
app/src/main/cpp/include/libavutil/: common.h
app/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h  HWCodecPlayer.cpp  HWCodecPlayer.h  MediaPlayer.h  PlayerWrapper.cpp  PlayerWrapper.h
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/: BaseGLRender.h
app/src/main/cpp/player/render/audio/: AudioGLRender.cpp  AudioGLRender.h  AudioRender.h  AudioVisualRender.cpp  AudioVisualRender.h  OpenSLRender.cpp  OpenSLRender.h
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  OpenGLRender.cpp  OpenGLRender.h  VRGLRender.cpp  VRGLRender.h  VideoGLRender.cpp  VideoGLRender.h  VideoRender.h
app/src/main/cpp/recorder/: GLCameraRender.cpp  GLCameraRender.h  MediaRecorder.cpp  MediaRecorder.h  MediaRecorderContext.cpp  MediaRecorderContext.h  SingleAudioRecorder.cpp  SingleAudioRecorder.h  SingleVideoRecorder.cpp  SingleVideoRecorder.h  muxing.c  muxing.h
app/src/main/cpp/util/: ASanTestCase.h  ImageDef.h  LogUtil.h
app/src/main/java/com/byteflow/learnffmpeg/: AVRecorderActivity.java  AudioRecorderActivity.java  AudioVisualMediaPlayerActivity.java  CameraActivity.java  FFMediaCodecPlayerActivity.java  GLMediaPlayerActivity.java  MainActivity.java  MediaPlayerActivity.java  MyFileProvider.java  NativeMediaPlayerActivity.java  StreamMediaPlayerActivity.java  VRMediaPlayerActivity.java  VideoRecorderActivity.java
app/src/main/java/com/byteflow/learnffmpeg/adapter/: MyRecyclerViewAdapter.java
app/src/main/java/com/byteflow/learnffmpeg/camera/: Camera2FrameCallback.java  Camera2Wrapper.java  CameraUtil.java
app/src/main/java/com/byteflow/learnffmpeg/media/: AudioRecorder.java  FFMediaPlayer.java  FFMediaRecorder.java  MediaRecorderContext.java  MyGLSurfaceView.java  MySurfaceView.java
app/src/main/java/com/byteflow/learnffmpeg/util/: CommonUtils.java
app/src/main/java/com/byteflow/learnffmpeg/view/: CaptureButton.java  CaptureLayout.java  CaptureListener.java  ClickListener.java  ReturnButton.java  (+5 more)
app/src/main/res/drawable/: ic_aspect_ratio.xml  ic_aspect_ratio_btn.xml  ic_aspect_ratio_pressed.xml  ic_switch_camera.xml  ic_switch_camera_btn.xml  ic_switch_camera_pressed.xml
app/src/main/res/layout/: activity_audio_recorder.xml  activity_audio_visual_media_player.xml  activity_camera.xml  activity_gl_media_player.xml  activity_main.xml  activity_media_player.xml  content_main.xml  resolution_item_layout.xml  resolution_selected_layout.xml  sample_selected_layout.xml
app/src/main/res/menu/: menu_camera.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/byteflow/learnffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
